// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ErrorBoundary renders (children) correctly without error 1`] = `
<div>
  Children
</div>
`;

exports[`Component: ErrorBoundary renders correctly with error 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": 1080,
    }
  }
>
  <EmptyState
    image={[Function]}
    primaryAction={
      Object {
        "content": "Go to Dashboard",
        "onClick": [Function],
      }
    }
    title="Sorry, something went wrong"
  >
    <p>
      We're having some technical issues. Our engineers have been notified and are working on getting this fixed.
    </p>
  </EmptyState>
</div>
`;

exports[`Component: ErrorBoundary renders custom cta label when passed 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": 1080,
    }
  }
>
  <EmptyState
    image={[Function]}
    primaryAction={
      Object {
        "content": "To Safety",
        "onClick": [Function],
      }
    }
    title="Sorry, something went wrong"
  >
    <p>
      We're having some technical issues. Our engineers have been notified and are working on getting this fixed.
    </p>
  </EmptyState>
</div>
`;

exports[`Component: ErrorBoundary uses custom action when passed 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": 1080,
    }
  }
>
  <EmptyState
    image={[Function]}
    primaryAction={
      Object {
        "content": "Reload Page",
        "onClick": [MockFunction],
      }
    }
    title="Sorry, something went wrong"
  >
    <p>
      We're having some technical issues. Our engineers have been notified and are working on getting this fixed.
    </p>
  </EmptyState>
</div>
`;
